# jarvis

./: .clang-format  .clang-tidy  .clangd  .gitignore  AGENTS-KERNEL-BRIEFING.md  AGENTS.md  BUGS.md  CODE-REVIEW-HARD-RTOS.md  CODING_STYLE.md  Doxyfile  IMPLEMENTED_TESTS_SUMMARY.md  LESSONS.md  Makefile  PROMPT-dev.md  PROMPT-testdev.md  README.md  README_done.md  ROADMAP.md  ROADMAP_done.md  app.py  audit_mempool.cpp.md  clang-tidy.txt  config.py  healthcheck.sh  linker_aarch64.ld  linker_riscv64.ld  models.py  project_structure.txt  qemu-virt.dtb  readme.html  requirements.txt  run_all_classes.sh  run_config_matrix.sh  start_opencode-jarvis-rtos.sh  test-history.txt  test.txt  testcases-arm.md  testcases-risc.md  testcases-v0.2.16.md  testcases-v0.2.17.md  (+22 more)
docs/: TESTLOG.md  debugging.md  ipc_blocking-C-rootcause.md  ipc_blocking-analysis.md  ipc_blocking-plan.md  ipc_blocking-redesign-v1.md  task-lifecycle-review.md  wcet_analysis.md
graphify-out/: .graphify_generated_labels.json  .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  manifest.json
linker/: linker_riscv64.ld
mk/: cpp-rules.gen.mk  rules.mk
os/: .gitignore  BUGS.md  CODING_STYLE.md  Doxyfile  IMPLEMENTED_TESTS_SUMMARY.md  JARVIS-CLA.md  LESSONS.md  Makefile  PROMPT-dev.md  PROMPT-testdev.md  PROMPT.md  README.md  REFACTORING-implementation.md  REFACTORING.md  ROADMAP.md  ROADMAP_done.md  ROADMAP_old.md  codestyle_todo.md  compile_flags.txt  initrd.cpio  linker.ld  opencode.json  project_structure.txt  projekt_structure.txt  prompt.md  readme.html  start_opencode-jarvis-rtos.sh  start_opencode.sh  stubs-implementable-now.txt  testcases-v0.2.10.md  testcases-v0.2.11.md  testcases-v0.2.12.md  testcases-v0.2.13.md  testcases-v0.2.14.md  testcases-v0.2.15.md  testcases-v0.2.16.md  testcases-v0.2.17.md  testcases-v0.2.9.md  testcases-v0.3.1.md  testcases-v0.3.2.md  (+11 more)
os/clion/: CMakeLists.txt
templates/: auftraege.html  base.html  index.html  kunde_detail.html  kunden.html  rechnungen.html
tools/: audit_module.py  check-config.py  deadline_matrix.sh  debug-gpf.sh  extract_gcda.py  fix_line_length.py  gen_test_registry.py  gpf-debug.sh  release-gdb.sh  run-test.exp  selftest-gdb-capture.exp  selftest-gdb.exp  selftest-gdb.sh  test_ipc_fix.exp  validate_style.py
userspace/: idle.c  iocd.c  mkdir.c  (+5 more)
(+6436 files in other folders)
